crates/borrowme/tests/ui/trait_diagnostics.stderr
error[E0277]: `MyType` doesn't implement `Debug`
  --> tests/ui/trait_diagnostics.rs:13:5
   |
10 | #[derive(Clone, Debug)]
   |                 ----- in this derive macro expansion
...
13 |     lang: &'a MyType,
   |     ^^^^^^^^^^^^^^^^ `MyType` cannot be formatted using `{:?}`
   |
   = help: the trait `Debug` is not implemented for `MyType`, which is required by `&&'a MyType: Debug`
   = note: add `#[derive(Debug)]` to `MyType` or manually `impl Debug for MyType`
   = note: this error originates in the derive macro `Debug` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `MyType` with `#[derive(Debug)]`
   |
6  + #[derive(Debug)]
7  | struct MyType;
   |

error[E0277]: the trait bound `MyOwnedType: Clone` is not satisfied
  --> tests/ui/trait_diagnostics.rs:13:5
   |
10 | #[derive(Clone, Debug)]
   |          ----- in this derive macro expansion
...
13 |     lang: &'a MyType,
   |     ^^^^^^^ the trait `Clone` is not implemented for `MyOwnedType`
   |
   = note: this error originates in the derive macro `Clone` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `MyOwnedType` with `#[derive(Clone)]`
   |
7  + #[derive(Clone)]
8  | struct MyOwnedType;
   |

error[E0277]: `MyOwnedType` doesn't implement `Debug`
  --> tests/ui/trait_diagnostics.rs:13:5
   |
10 | #[derive(Clone, Debug)]
   |                 ----- in this derive macro expansion
...
13 |     lang: &'a MyType,
   |     ^^^^^^^ `MyOwnedType` cannot be formatted using `{:?}`
   |
   = help: the trait `Debug` is not implemented for `MyOwnedType`, which is required by `&MyOwnedType: Debug`
   = note: add `#[derive(Debug)]` to `MyOwnedType` or manually `impl Debug for MyOwnedType`
   = note: this error originates in the derive macro `Debug` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `MyOwnedType` with `#[derive(Debug)]`
   |
7  + #[derive(Debug)]
8  | struct MyOwnedType;
   |
